log/build_2025-03-16_03-19-12/voice_controlled_robot/stderr.log
  File "/home/abd3194/ros2_ws/install/voice_controlled_robot/lib/python3.10/site-packages/voice_controlled_robot/Nodes.py", line 135
    if __name__="__main__":
       ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

